Fix ios bottom-bar covering audioplayer, add cors-header for whole servlet and some other minor things.

--- a/frontend/src/components/audio-player/audio-player.styles.scss
+++ b/frontend/src/components/audio-player/audio-player.styles.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   box-sizing: border-box;
   width: 100%;
-  margin: auto;
+  margin: auto auto 0 auto;
   background: black;
   color: white;
   display: flex;
