--- a/frontend/src/components/track/track.styles.scss
+++ b/frontend/src/components/track/track.styles.scss
@@ -4,6 +4,8 @@
 
   border-top: 1px lightgrey solid;
 
+  color: black;
+
   td {
     text-align: left;
     padding: 8px;
